<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preference_refreshing" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_auto_refresh"
            android:summary="@string/preference_auto_refresh_summary"
            android:title="@string/preference_auto_refresh" />

        <EditTextPreference
            android:defaultValue="10"
            android:dependency="preference_auto_refresh"
            android:inputType="number"
            android:key="preference_refresh_period"
            android:title="@string/preference_period" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_notifications" >
        <PreferenceScreen
            android:key="preferencescreen_notifications"
            android:title="@string/preference_notifications" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="preference_notifications_led"
                android:summary="@string/preference_notifications_led_summary"
                android:title="@string/preference_notifications_led" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="preference_notifications_sound"
                android:summary="@string/preference_notifications_sound_summary"
                android:title="@string/preference_notifications_sound" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="preference_notifications_vibrations"
                android:summary="@string/preference_notifications_vibration_summary"
                android:title="@string/preference_notifications_vibration" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_extras" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_auto_mark_as_read"
            android:summary="@string/preference_auto_mark_as_read_summary"
            android:title="@string/preference_auto_mark_as_read" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_keep_read_feeds"
            android:summary="@string/preference_keep_read_feeds_summary"
            android:title="@string/preference_keep_read_feeds" />
    </PreferenceCategory>

</PreferenceScreen>