<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70000000"
    tools:context=".InstructionActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/contentDescription_arrow"
        android:src="@drawable/instruction_down_icon" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/contentDescription_arrow"
        android:src="@drawable/instruction_up_icon" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/instruction_pull_down_to_refresh"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/instruction_pull_up_to_mark_all_as_read"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/contentDescription_arrow"
        android:src="@drawable/instruction_forward_icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/imageView3"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/instruction_slide_right_to_select_channels"
        android:textColor="@android:color/white" />

</RelativeLayout>