<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu_list"
    android:minWidth="300dp"
    android:orientation="vertical" >

    <include layout="@layout/divider_horizontal" />

    <TextView
        style="@style/textStyleBlueHeader"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/menu_title_buttons" />

    <include layout="@layout/divider_horizontal" />

    <Button
        android:id="@+id/buttonMenuMarkAllAsRead"
        style="@style/ButtonMenuList"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ic_mark_as_read"
        android:fontFamily="sans-serif-light"
        android:text="@string/menu_mark_all_as_read" />

    <include layout="@layout/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonMenuRefresh"
            style="@style/ButtonMenuList"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_refresh"
            android:fontFamily="sans-serif-light"
            android:text="@string/menu_refresh" />

        <include
            android:layout_width="0dp"
            android:layout_weight="1"
            layout="@layout/divider_vertical" />

        <Button
            android:id="@+id/buttonMenuSettings"
            style="@style/ButtonMenuList"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_settings"
            android:fontFamily="sans-serif-light"
            android:text="@string/menu_settings" />
    </LinearLayout>

    <include layout="@layout/divider_horizontal" />

    <pwr.rss.reader.views.AboutView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>